@@ -1,3 +1,8 @@
+2004-10-04  Andrew Lunn  <andrew.lunn@ascom.ch>
+
+	* src/romfs.c (romfs_mount): Avoid a compiler warning about punned
+	types.
+
 2004-08-08  Bart Veer  <bartv@ecoscentric.com>
 
 	* cdl/romfs.cdl: generate both little-endian and big-endian image
